# gabriel-osemberg

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SOUL.md  budget.json  fly.toml  package-lock.json  package.json
.claude/: CLAUDE.md
.claude/agents/: _TEMPLATE.md  code-reviewer.md  planning-specialist.md  test-writer.md
.claude/commands/: ask.md  audit.md  commit.md  compact.md  consider.md  development.md  execute.md  fix.md  mega.md  pdf.md  plan.md  prompt.md  propose.md  purity.md  refactor.md  refresh.md  research.md  restore.md  review.md  roadmap.md  scope.md  snapshot.md  stream.md  task.md
.claude/workflows/: PARTNERSHIP_EXECUTION.md  SUBAGENT_WORKFLOW.md
.context/execute/: BOOTSTRAP.md  PROTOCOL.md
.context/execute/_SLOT_TEMPLATE/: escalation.md  maintenance.md  priority.md  report.md  task.md
.context/research/: MINING_QUEUE.md
.context/research/digested/: vibe-coding-digest.md
.context/standards/: ARCHITECTURE.md  CONVENTIONS.md  MEGA_CHECKLIST.md  PURITY_RULES.md  QUALITY_GATES.md  SCIENTIFIC_METHOD.md  TDD_METHODOLOGY.md
.context/standards/protocols/: CRISIS_RESPONSE.md  EVIDENCE_PROTOCOL.md
.context/streams/: BOOTSTRAP.md  CROSS.md  PROTOCOL.md
.context/streams/DATA/: inbox.md  outbox.md  report.md  status.md  task.md  tracks.md
.context/streams/DATA/research/: 001-inventory.md  002-world-survey.md  003-gap-analysis.md  004-questions.md  005-roadmap.md  006-dependencies.md  007-resources.md
.context/streams/DESIGN/: inbox.md  outbox.md  report.md  status.md  task.md  tracks.md
.context/streams/DESIGN/research/: 001-inventory.md  002-world-survey.md  004-questions.md  (+4 more)
.context/streams/IDENTITY/: inbox.md  outbox.md  report.md  status.md  task.md  tracks.md
.context/streams/INFRA/: inbox.md  outbox.md  report.md  status.md  task.md  tracks.md
.context/streams/SHOWCASE/: inbox.md  outbox.md  report.md  status.md  task.md  tracks.md
.context/streams/_STREAM_TEMPLATE/: inbox.md  outbox.md  status.md  tracks.md
.github/workflows/: ci.yml  deploy.yml  lighthouse.yml
data/: contributors.json
docs/: DECISIONS.md  ENVIRONMENT.md  LEARNING_LOG.md  METRICS.md  ORCHESTRATOR_ROADMAP.md  ROADMAP.md  STATE.md
docs/checklists/: references.md
migrations/: 001_create_tables.sql  002_seed_showcase_data.sql  003_add_metrics_and_tags.sql  004_seed_metrics_and_tags.sql  005_seed_experiences_and_cv_content.sql  006_seed_identity_data.sql  007_seed_writing_section.sql
public/: robots.txt  sitemap.xml
src/: app.rs  lib.rs  main.rs  server_fns.rs
src/components/: about_page.rs  error.rs  hero.rs  layout.rs  loading.rs  metrics.rs  metrics_dashboard.rs  mobile_menu.rs  mod.rs  pages.rs  project_card.rs  project_detail.rs  project_highlights.rs  projects_page.rs  scroll_reveal.rs  skills.rs  theme_toggle.rs  timeline.rs  ui.rs
src/components/charts/: framework_diagram.rs  metric_stat.rs  mod.rs  progress_ring.rs
src/models/: cv_section.rs  experience.rs  mod.rs  project.rs  project_metric.rs  project_tag.rs  skill.rs  tech_tag.rs
src/server/: cv_template.typ  error.rs  health.rs  middleware.rs  mod.rs  pdf.rs
style/: tailwind.css
tests/: data_queries.rs  health_endpoint.rs
(+22 files in other folders)
